tests/errors/generic_forward_declaration.orus
// This test demonstrates that generic forward declarations are not yet supported
// Regular functions can be called before definition, but generic functions cannot.
// This test should fail to compile with the current implementation.

fn main() {
    // This should fail because generic_function is used before its definition
    let result = generic_function<i32>(10);
    print(result);
}

// The generic function definition comes after its use
fn generic_function<T>(value: T) -> T {
    return value;
}
